@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 2.7.0 - 2021-xx-xx =
+* Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
 * Fix - WooCommerce Payments admin pages redirect to the onboarding page when the WooCommerce Payments account is disconnected.
 
 = 2.6.1 - 2021-07-01 =
